<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
	<groupId>com.github.chav1961</groupId>
	<artifactId>fsyscommander</artifactId>
	<version>0.0.1</version>
	<description>Radioamator's calculator</description>
	<url>https://github.com/chav1961/fsyscommander</url>
	<packaging>jar</packaging>
	<name>fsyscommander</name>
	  
	<developers>
		<developer>
			<name>Alexander Chernomyrdin aka chav1961</name>
			<email>chav1961@mail.com</email>
			<organization>Alexander Chernomyrdin aka chav1961</organization>
			<organizationUrl>https://github.com/chav1961/</organizationUrl>
		</developer>
	</developers>
	<scm>
		<connection>scm:git:git@github.com:chav1961/calculator.git</connection>
		<developerConnection>scm:git:git@github.com:chav1961/calculator.git</developerConnection>
		<url>git@github.com:chav1961/calculator.git</url>
	</scm>
	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/chav1961/fsyscommander/issues</url>
	</issueManagement>
	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://github.com/chav1961/fsyscommander/blob/master/LICENSE</url>
		</license>
	</licenses>

  	<properties>
	    <github.global.server>github</github.global.server>
	</properties>

  
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
  		<dependency>
			<groupId>com.github.chav1961</groupId>
			<artifactId>purelib</artifactId>
			<version>0.0.4</version>
		</dependency>		
	</dependencies>
  
	<repositories>
	    <repository>
	        <id>purelib-mvn-repo</id>
	        <url>https://raw.github.com/chav1961/purelib/mvn-repo/</url>
	        <snapshots>
	            <enabled>true</enabled>
	            <updatePolicy>always</updatePolicy>
	        </snapshots>
	    </repository>
	</repositories>

  	<distributionManagement>
	    <repository>
	        <id>internal.repo</id>
	        <name>Temporary Staging Repository</name>
	        <url>file://${project.build.directory}/mvn-repo</url>
	    </repository>
	</distributionManagement>
  
     <build>
       <finalName>fsyscmd-0.0.1</finalName>
        <resources>
            <resource>
                <directory>src/main/java</directory>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>
       <plugins>
           <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-compiler-plugin</artifactId>
               <version>3.7.0</version>
               <inherited>true</inherited>
               <configuration>
                   <source>9</source>
                   <target>9</target>
               </configuration>
           </plugin>
           <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-jar-plugin</artifactId>
               <version>2.6</version>
               <inherited>true</inherited>
               <configuration>
                   <archive>
                       <index>false</index>
                       <manifest>
                           <addClasspath>true</addClasspath>
                           <classpathPrefix>./</classpathPrefix>
                            <mainClass>chav1961.fsyscommander.Application</mainClass>
                       </manifest>
                   </archive>
               </configuration>
           </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>2.3</version>
                <configuration>
                    <!-- put your configurations here -->
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            
	    <plugin>
	        <artifactId>maven-deploy-plugin</artifactId>
	        <version>2.8.1</version>
	        <configuration>
	               <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
	        </configuration>
	    </plugin>

       </plugins>
   </build></project>